--- a/index.html
+++ b/index.html
@@ -17,19 +17,17 @@
     <meta name="theme-color" content="#000">
     <meta name="application-name" content="Reboot13 Cc Gen">
     <link rel="stylesheet" href="style.css">
+    
 
-    <!-- Don't Touch -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-178193698-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M536L03ECK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-178193698-1');
-    </script>
+  gtag('config', 'G-M536L03ECK');
+</script>
 </head>
 
 <body>
