--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-title" content="World Bins Cc Gen">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#000">
-    <meta name="application-name" content="Reboot13 Cc Gen">
+    <meta name="application-name" content="Full CC Gen">
     <link rel="stylesheet" href="style.css">
     
 
