--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FULL CC GENERATOR•</title>
-    <meta name="description" content="Full CC Generator">
+    <meta name="description" content="Mayank">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script async="" src="https://cdn.sessionstack.com/sessionstack.js"></script>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="World Bins Cc Gen">
+    <meta name="apple-mobile-web-app-title" content="Full Bins Cc Gen">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#000">
-    <meta name="application-name" content="Full CC Gen">
+    <meta name="application-name" content="gammermayank Cc Gen">
     <link rel="stylesheet" href="style.css">
-    
 
-   <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M536L03ECK"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
