--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="circle">
                   <img src="fullbins.jpg" height="50x" alt="" />
                 </div>
-                <p>FULL BINS</p>
+                <p> BINS</p>
               </div>
             </a>
             <a href="https://t.me/ModsApkStore">
