--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </nav>
 
       <div class="heading">
-        <h1><a href="https://t.me/joinchat/eNIGeRN8u7wxMTRl">FULL BINS</a></h1>
+        <h1><a href="https://t.me/blackwol_f">FULL BINS</a></h1>
       </div>
       <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
         <div class="creditsMid">
           <h2>Telegram Channel</h2>
           <div class="midder">
-            <a href="https://t.me/joinchat/eNIGeRN8u7wxMTRl">
+            <a href="https://t.me/blackwol_f">
               <div class="boxer">
                 <div class="circle">
                   <img src="fullbins.jpg" height="50x" alt="" />
@@ -104,7 +104,7 @@
                 <p>MODS APK</p>
               </div>
             </a>
-            <a href="https://t.me/joinchat/X6SDbJbZDM40OWU1">
+            <a href="https://t.me/blackwol_f">
               <div class="boxer">
                 <div class="circle">
                   <img src="chat.jpg" height="50x" alt="" />
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <!-- <p> By :- Gamer Mayank </br> Telegarm <a href="https://t.me/gammermayank">@gammermayank</a>
+        <!-- <p> By :- Gamer Mayank </br> Telegarm <a href="https://t.me/blackwol_f">@gammermayank</a>
             </p>
             <p> Modified By :- </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
             </p> -->
