--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
       gtag("config", "G-M536L03ECK");
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4416862212946058"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
