--- a/about.html
+++ b/about.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
     />
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4416862212946058"
+     crossorigin="anonymous"></script>
+
+
     <script
       type="text/javascript"
       async=""
