--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       content="width=device-width,initial-scale=1,user-scalable=no"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>FULL CC GENERATOR•</title>
+    <title>BLACK-WOLF CC GENERATOR•</title>
     <meta name="description" content="Mayank" />
     <link
       rel="stylesheet"
@@ -57,7 +57,7 @@
     <div id="app">
       <nav class="navigations">
         <div class="text">
-          <a href="index.html"><div class="logo">•FULL BINS•</div></a>
+          <a href="index.html"><div class="logo">•BLACK WOLF•</div></a>
           <div class="ul">
             <a href="about.html"><div class="li">About</div></a>
           </div>
@@ -67,7 +67,7 @@
       </nav>
 
       <div class="heading">
-        <h1><a href="https://t.me/blackwol_f">FULL BINS</a></h1>
+        <h1><a href="https://t.me/blackwol_f">BLACK WOLF</a></h1>
       </div>
       <div class="container">
         <div class="row">
@@ -97,7 +97,7 @@
                 <div class="circle">
                   <img src="fullbins.jpg" height="50x" alt="" />
                 </div>
-                <p> BINS</p>
+                <p> BLACK WOLF CC</p>
               </div>
             </a>
             <a href="https://t.me/ModsApkStore">
@@ -105,7 +105,7 @@
                 <div class="circle">
                   <img src="mod.jpg" height="50x" alt="" />
                 </div>
-                <p>MODS APK</p>
+                <p>BLACK WOLF CC</p>
               </div>
             </a>
             <a href="https://t.me/blackwol_f">
@@ -113,22 +113,22 @@
                 <div class="circle">
                   <img src="chat.jpg" height="50x" alt="" />
                 </div>
-                <p>FB CHAT</p>
+                <p>BLACK WOLF CC</p>
               </div>
             </a>
           </div>
         </div>
 
-        <!-- <p> By :- Gamer Mayank </br> Telegarm <a href="https://t.me/blackwol_f">@gammermayank</a>
+         <p> By :- Gamer Mayank </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
             </p>
             <p> Modified By :- </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
-            </p> -->
+            </p>
       </center>
     </div>
     <div class="description">
       <div class="content">
         <p>
-          Thank you for visiting Full Gen. We are a technology solution to help
+          Thank you for visiting BLACK WOLF CC GENERATOR. We are a technology solution to help
           technology vendors solve data challenges experienced in enterprise
           situations. We do this by providing multi-purpose random data
           generator for prototyping / testing in the field of code programming,
@@ -136,7 +136,7 @@
         </p>
         <br />
         <p>
-          The Full Bin random test credit card entry system provides numbers are
+          The BLACK WOLF random test credit card entry system provides numbers are
           needed to test owned credit card systems and for research purposes.
           These numbers are not valid and do not enable transactions. The
           generator uses the Luhn algorithm. These credit card numbers are not
@@ -172,7 +172,7 @@
       </div>
     </div>
     <footer>
-      <div class="footerContent">Copyright © OfficalFullBins 2022</div>
+      <div class="footerContent">Copyright © BLACK WOLF CC 2022</div>
     </footer>
     <script src="app.js"></script>
     <script>
