--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="circle">
                   <img src="fullbins.jpg" height="50x" alt="" />
                 </div>
-                <p> BLACK WOLF CC</p>
+                <p>BLACKWOLF</p>
               </div>
             </a>
             <a href="https://t.me/ModsApkStore">
@@ -105,7 +105,7 @@
                 <div class="circle">
                   <img src="mod.jpg" height="50x" alt="" />
                 </div>
-                <p>BLACK WOLF CC</p>
+                <p>BLACKWOLF</p>
               </div>
             </a>
             <a href="https://t.me/blackwol_f">
@@ -113,13 +113,13 @@
                 <div class="circle">
                   <img src="chat.jpg" height="50x" alt="" />
                 </div>
-                <p>BLACK WOLF CC</p>
+                <p>BLACKWOLF</p>
               </div>
             </a>
           </div>
         </div>
 
-         <p> By :- Gamer Mayank </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
+         <p> By :- vened </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
             </p>
             <p> Modified By :- </br> Telegarm <a href="https://t.me/vened0003">@vened0003</a>
             </p>
